Edit Profile and Edit Roles functionalities
Adding Edit Profile and Edit Roles functionalities. Controller and Service methods and HTML with Thymeleaf.

--- a/kbayryakov/src/main/resources/templates/users/login.html
+++ b/kbayryakov/src/main/resources/templates/users/login.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
-<th:block th:include="~{fragments/head}"/>
+<th:block th:insert="~{fragments/head}"/>
 <body>
-<th:block th:include="~{fragments/header}"/>
+<th:block th:insert="~{fragments/header}"/>
 <main>
     <h1 class="text-center text-white">Login</h1>
     <hr class="hr-2 bg-dark w-25">
@@ -48,6 +48,6 @@
         </div>
     </th:block>
 </main>
-<th:block th:include="~{fragments/footer}"/>
+<th:block th:insert="~{fragments/footer}"/>
 </body>
 </html>
