--- a/kbayryakov/src/main/resources/templates/users/edit-profile.html
+++ b/kbayryakov/src/main/resources/templates/users/edit-profile.html
@@ -13,42 +13,64 @@
                 class="form w-25 mx-auto"
                 th:action="@{/users/edit-profile}"
                 th:method="patch"
+                th:object="${model}"
         >
             <input type="hidden" name="_csrf" value="80417983-fe8b-45c7-963e-31f6915a1560">
             <div class="form-group text-center text-white">
                 <label for="username" class="mb-1">Username</label>
                 <input type="text"
-                       th:value="${model.username}"
+                       th:field="*{username}"
                        class="form-control"
                        name="username"
                        id="username"
                 >
+                <small th:errors="*{username}" id="usernameUniqueError"
+                       class=" bg-danger text-white rounded"></small>
             </div>
             <div class="form-group text-center text-white">
                 <label for="oldPassword" class="mb-1">Old Password</label>
-                <input type="password" class="form-control" id="oldPassword" placeholder="Password..."
+                <input type="password"
+                       th:field="*{password}"
+                       class="form-control"
+                       id="oldPassword"
+                       placeholder="Password..."
                        name="oldPassword"
                        required>
+                <small th:errors="*{password}" id="passwordUniqueError"
+                       class=" bg-danger text-white rounded"></small>
             </div>
             <div class="form-group text-center text-white">
                 <label for="password" class="mb-1">New Password</label>
-                <input type="password" class="form-control" id="password" placeholder="New Password..."
+                <input type="password"
+                       th:field="*{newPassword}"
+                       class="form-control"
+                       id="password"
+                       placeholder="New Password..."
                        name="password">
+                <small th:errors="*{newPassword}" id="newPasswordUniqueError"
+                       class=" bg-danger text-white rounded"></small>
             </div>
             <div class="form-group text-center text-white">
                 <label for="confirmPassword" class="mb-1">Confirm New Password</label>
-                <input type="password" class="form-control" id="confirmPassword"
+                <input type="password"
+                       th:field="*{confirmNewPassword}"
+                       class="form-control"
+                       id="confirmPassword"
                        placeholder="Confirm New Password..."
                        name="confirmPassword">
+                <small th:errors="*{confirmNewPassword}" id="confirmNewPasswordUniqueError"
+                       class=" bg-danger text-white rounded"></small>
             </div>
             <div class="form-group text-center text-white">
                 <label for="email" class="mb-1">Email</label>
                 <input type="email"
-                       th:value="${model.email}"
+                       th:field="*{email}"
                        class="form-control"
                        id="email"
                        placeholder="Email..."
                        name="email">
+                <small th:errors="*{email}" id="emailUniqueError"
+                       class=" bg-danger text-white rounded"></small>
             </div>
             <hr class="hr-2 bg-dark">
             <div class="button-holder d-flex justify-content-center">
