--- a/kbayryakov/src/main/resources/templates/users/register.html
+++ b/kbayryakov/src/main/resources/templates/users/register.html
@@ -10,6 +10,11 @@
     <main class="mt-3">
         <h1 class="text-center text-white">Register</h1>
         <hr class="hr-2 bg-dark w-25">
+
+        <div th:if="${errorMessage}" class="alert alert-danger" role="alert">
+            <span th:text="${errorMessage}"></span>
+        </div>
+
         <form class="form w-25 mx-auto"
               th:action="@{/users/register}"
               th:method="post"
