Add vehicles functionality
Adding add-vehicles functionality

--- a/kbayryakov/src/main/resources/templates/fragments/header.html
+++ b/kbayryakov/src/main/resources/templates/fragments/header.html
@@ -52,8 +52,8 @@
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="vehicleDropdown">
                                     <a class="dropdown-item" th:href="@{/vehicles/add-vehicle}">+Add Vehicle</a>
-                                    <a class="dropdown-item" th:href="@{/vehicles/my-vehicle}">My Vehicle</a>
-                                    <a class="dropdown-item" th:href="@{/vehicles/all-vehicles}">All Vehicle</a>
+                                    <a class="dropdown-item" th:href="@{/vehicles/my-vehicles}">My Vehicles</a>
+                                    <a class="dropdown-item" th:href="@{/vehicles/all-vehicles}">All Vehicles</a>
                                 </div>
                             </div>
                         </li>
@@ -69,8 +69,8 @@
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="offerDropdown">
                                     <a class="dropdown-item" th:href="@{/offers/add-offer}">+Add Offer</a>
-                                    <a class="dropdown-item" th:href="@{/offers/my-offer}">My Offer</a>
-                                    <a class="dropdown-item" th:href="@{/offers/all-offer}">All Offer</a>
+                                    <a class="dropdown-item" th:href="@{/offers/my-offer}">My Offers</a>
+                                    <a class="dropdown-item" th:href="@{/offers/all-offer}">All Offers</a>
                                 </div>
                             </div>
                         </li>
