Add vehicles functionality
Added edit, delete, and view all vehicles. Controller and service methods and thymeleaf.

--- a/kbayryakov/src/main/resources/templates/fragments/head.html
+++ b/kbayryakov/src/main/resources/templates/fragments/head.html
@@ -1,4 +1,4 @@
-<th:block >
+<th:block xmlns:th="http://www.w3.org/1999/xhtml">
         <head>
         <meta charset="UTF-8">
         <meta name="viewport"
