--- a/kbayryakov/src/main/resources/templates/error.html
+++ b/kbayryakov/src/main/resources/templates/error.html
@@ -2,24 +2,24 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <th:block th:include="~{fragments/head}"/>
+    <th:block th:insert="~{fragments/head}"/>
 </head>
 <body>
 <header>
-    <th:block th:include="~{fragments/header}"/>
+    <th:block th:insert="~{fragments/header}"/>
 </header>
 <main class="mt-3">
     <h1 class="text-center text-dark">Something Went Wrong</h1>
     <hr class="hr-2 bg-dark ">
     <div class="text-center">
-        <h3 th:text="${message}" style="color: red;"></h3>
+        <h3 th:text="${errorMessage}" style="color: red;"></h3>
     </div>
     <div class="text-center" >
         <img th:src="'https://http.cat/' + ${statusCode}" th:width="500" th:height="450" alt="Cat">
     </div>
 </main>
 <footer>
-    <th:block th:include="~{fragments/footer}"/>
+    <th:block th:insert="~{fragments/footer}"/>
 </footer>
 </body>
 </html>
