--- a/kbayryakov/src/main/resources/templates/home/home.html
+++ b/kbayryakov/src/main/resources/templates/home/home.html
@@ -13,7 +13,7 @@
         <hr class="my-3"/>
         <div id="toChange" class=".quotes-data">
             <div class="mt-3">
-                <h1 class="text-black text-center" style="font-size: larger">Welcome to KBayryakov Car App !
+                <h1 class="text-light text-center" style="font-size: larger">Welcome to KBayryakov Car App !
                     This is a place for everyone who want to enjoy our events and see our offers.</h1>
             </div>
         </div>
