--- a/kbayryakov/src/main/resources/templates/home/index.html
+++ b/kbayryakov/src/main/resources/templates/home/index.html
@@ -7,13 +7,13 @@
 
 <main>
     <div class="container">
-        <h1>Welcome to KBayryakov Car App</h1>
+        <h1 class="text-light">Welcome to KBayryakov Car App</h1>
         <hr class="my-3"/>
-        <h3><a th:href="@{/users/login}">Login</a> if you have an account or
+        <h3 class="text-light"><a th:href="@{/users/login}">Login</a> if you have an account or
             <a th:href="@{/users/register}">Register</a> now and explore our cars.
         </h3>
         <hr class="my-3"/>
-        <h1>Have a nice journey!</h1>
+        <h1 class="text-light">Have a nice journey!</h1>
     </div>
 </main>
 
