--- a/kbayryakov/src/main/resources/templates/offers/add-offer.html
+++ b/kbayryakov/src/main/resources/templates/offers/add-offer.html
@@ -8,31 +8,37 @@
 <main>
     <div class="container mt-4">
         <div class="card shadow p-4">
-            <h2 class="text-center text-dark">Add Offer</h2>
-            <form th:action="@{/offers/add-offer}" th:method="post">
+            <h2 class="text-center text-light">Add Offer</h2>
+            <form th:action="@{/offers/add-offer}" th:method="post" enctype="multipart/form-data">
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
                             <label for="vehicle" class="font-weight-bold">Vehicle</label>
-                            <select class="form-control" id="vehicle" name="vehicle" required>
+                            <select class="form-control" id="vehicle" name="vehicle">
                                 <option selected disabled>--- Select Vehicle ---</option>
                                 <option th:each="vehicle : ${vehicles}"
                                         th:value="${vehicle.id}"
                                         th:text="${vehicle.type} + ', ' + ${vehicle.brand} + ', ' + ${vehicle.model}">
                                 </option>
                             </select>
+                            <small th:errors="*{vehicles}" id="vehicleUniqueError"
+                                   class=" bg-danger text-white rounded"></small>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="form-group">
                             <label for="createdOn" class="font-weight-bold">Created On</label>
-                            <input type="date" required class="form-control" id="createdOn" name="createdOn">
+                            <input type="date" class="form-control" id="createdOn" name="createdOn">
+                            <small th:errors="*{addOfferDto.createdOn}" id="createdOnUniqueError"
+                                   class=" bg-danger text-white rounded"></small>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="form-group">
                             <label for="validUntil" class="font-weight-bold">Valid Until</label>
-                            <input type="date" required class="form-control" id="validUntil" name="validUntil">
+                            <input type="date" class="form-control" id="validUntil" name="validUntil">
+                            <small th:errors="*{addOfferDto.validUntil}" id="validUntilUniqueError"
+                                   class=" bg-danger text-white rounded"></small>
                         </div>
                     </div>
                 </div>
@@ -40,16 +46,32 @@
                     <div class="col-md-6">
                         <div class="form-group">
                             <label for="price" class="font-weight-bold">Price</label>
-                            <input type="number" step="any" min="0" required class="form-control" id="price" name="price">
+                            <input type="number" step="any" min="0" class="form-control" id="price" name="price">
+                            <small th:errors="*{addOfferDto.price}" id="priceUniqueError"
+                                   class=" bg-danger text-white rounded"></small>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
                             <label for="description" class="font-weight-bold">Description</label>
-                            <textarea name="description" required id="description" class="form-control" rows="3"></textarea>
+                            <textarea name="description" id="description" class="form-control" rows="3"></textarea>
+                            <small th:errors="*{addOfferDto.description}" id="descriptionUniqueError"
+                                   class=" bg-danger text-white rounded"></small>
                         </div>
                     </div>
                 </div>
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="imageUrl" class="font-weight-bold">Upload Image</label>
+                            <input type="file" class="form-control-file" id="imageUrl" name="imageUrl">
+                            <small th:errors="*{addOfferDto.imageUrl}" id="imageUrlUniqueError"
+                                   class=" bg-danger text-white rounded"></small>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="text-center mt-3">
                     <button type="submit" class="btn btn-success">Add Offer</button>
                 </div>
