--- a/kbayryakov/src/main/resources/templates/users/all-users.html
+++ b/kbayryakov/src/main/resources/templates/users/all-users.html
@@ -2,20 +2,20 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <th:block th:include="~{fragments/head}"/>
+    <th:block th:insert="~{fragments/head}"/>
 </head>
 <body>
 <header>
-    <th:block th:include="~{fragments/header}"/>
+    <th:block th:insert="~{fragments/header}"/>
 </header>
 <main class="mt-3">
-    <h1 class="text-center text-dark">All Users</h1>
+    <h1 class="text-center text-white" th:text="${title}"></h1>
     <hr class="hr-2 bg-dark w-75">
     <table class="table table-hover w-75 mx-auto">
         <thead>
         <tr class="row mx-auto text-white font-weight-bold">
             <th class="col-md-3 text-center">Username</th>
-            <th class="col-md-2 text-center">Email</th>
+            <th class="col-md-4 text-center">Email</th>
             <th class="col-md-2 text-center">Roles</th>
             <th class="col-md-3 text-center">Actions</th>
         </tr>
@@ -24,7 +24,7 @@
         <th:block th:each="user, iter : ${users}">
             <tr class="row mx-auto text-white font-weight-bold">
                 <td class="col-md-3 text-center" th:text="${user.username}"></td>
-                <td class="col-md-2 text-center" th:text="${user.email}"></td>
+                <td class="col-md-4 text-center" th:text="${user.email}"></td>
                 <td class="col-md-2 text-center"
                     th:text="${#strings.replace(#strings.listJoin(user.authorities.![authority], ', '), 'ROLE_', '')}"
                     ></td>
@@ -33,43 +33,19 @@
                     <div class="row d-flex justify-content-center">
                         <!-- ROLE_USER -->
                         <th:block th:if="${#lists.contains(user.authorities.![authority], 'ROLE_USER') &&
-                      !#lists.contains(user.authorities.![authority], 'ROLE_MODERATOR') &&
                       !#lists.contains(user.authorities.![authority], 'ROLE_ADMIN')}">
-                            <form th:action="@{/users/set-moderator/{id}(id=${user.id})}" method="post">
-                                <button class="btn btn-dark btn-width">MODERATOR</button>
-                            </form>
                             <form th:action="@{/users/set-admin/{id}(id=${user.id})}" method="post">
                                 <button class="btn btn-dark btn-width">ADMIN</button>
                             </form>
                         </th:block>
 
-                        <!-- ROLE_USER, ROLE_MODERATOR -->
                         <th:block th:if="${#lists.contains(user.authorities.![authority], 'ROLE_USER') &&
-                      #lists.contains(user.authorities.![authority], 'ROLE_MODERATOR') &&
-                      !#lists.contains(user.authorities.![authority], 'ROLE_ADMIN')}">
-                            <form th:action="@{/users/set-moderator/{id}(id=${user.id})}" method="post">
-                                <button class="btn btn-dark btn-width">MODERATOR</button>
-                            </form>
-                            <form th:action="@{/users/set-admin/{id}(id=${user.id})}" method="post">
-                                <button class="btn btn-dark btn-width">ADMIN</button>
-                            </form>
-                        </th:block>
-
-                        <!-- ALL -->
-                        <th:block th:if="${#lists.contains(user.authorities.![authority], 'ROLE_USER') &&
-                      #lists.contains(user.authorities.![authority], 'ROLE_MODERATOR') &&
                       #lists.contains(user.authorities.![authority], 'ROLE_ADMIN')}">
-                            <form th:action="@{/users/set-user/{id}(id=${user.id})}" method="post">
-                                <button class="btn btn-warning btn-width">REMOVE MODERATOR</button>
-                            </form>
                             <form th:action="@{/users/set-user/{id}(id=${user.id})}" method="post">
                                 <button class="btn btn-danger btn-width">REMOVE ADMIN</button>
                             </form>
                         </th:block>
                     </div>
-
-
-
                 </td>
             </tr>
         </th:block>
@@ -78,7 +54,7 @@
     <hr class="hr-2 bg-dark">
 </main>
 <footer>
-    <th:block th:include="~{fragments/footer}"/>
+    <th:block th:insert="~{fragments/footer}"/>
 </footer>
 </body>
 </html>
