--- a/kbayryakov/src/main/resources/templates/users/edit-profile.html
+++ b/kbayryakov/src/main/resources/templates/users/edit-profile.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
-<th:block th:include="~{fragments/head}"/>
+<th:block th:insert="~{fragments/head}"/>
 <body>
-<th:block th:include="~{fragments/header}"/>
+<th:block th:insert="~{fragments/header}"/>
 <main class="mt-5">
     <div class="bg-image-quote-create">
         <span style="visibility: hidden">....</span>
@@ -80,6 +80,6 @@
         <span style="visibility: hidden">....</span>
     </div>
 </main>
-<th:block th:include="~{fragments/footer}"/>
+<th:block th:insert="~{fragments/footer}"/>
 </body>
 </html>
