--- a/kbayryakov/src/main/resources/templates/users/register.html
+++ b/kbayryakov/src/main/resources/templates/users/register.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
-<th:block th:include="~{fragments/head}"/>
+<th:block th:insert="~{fragments/head}"/>
 <body>
 <header>
-    <th:block th:include="~{fragments/header}"/>
+    <th:block th:insert="~{fragments/header}"/>
 </header>
 <main>
     <main class="mt-3">
@@ -84,6 +84,6 @@
         </form>
     </main>
 </main>
-<th:block th:include="~{fragments/footer}"/>
+<th:block th:insert="~{fragments/footer}"/>
 </body>
 </html>
