--- a/kbayryakov/src/main/resources/templates/vehicles/add-vehicle.html
+++ b/kbayryakov/src/main/resources/templates/vehicles/add-vehicle.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
-<th:block th:include="~{fragments/head}"/>
+<th:block th:insert="~{fragments/head}"/>
 <body>
-<th:block th:include="~{fragments/header}"/>
+<th:block th:insert="~{fragments/header}"/>
 
 <main>
     <div class="container">
         <div class="container-fluid">
-            <h2 class="text-center text-dark">Add Vehicle</h2>
+            <h2 class="text-center text-light">Add Vehicle</h2>
             <form class="mx-auto w-75" th:action="@{/vehicles/add-vehicle}" th:method="post" th:object="${vehicleDetails}">
-                <!-- First Row -->
+
                 <div class="row mb-3">
                     <div class="col-md-4">
                         <div class="form-group">
@@ -20,22 +20,27 @@
                                 <option value="Motor">Motor</option>
                                 <option value="Truck">Truck</option>
                             </select>
+                            <small th:errors="*{type}" id="typeUniqueError"
+                                   class=" bg-danger text-white rounded"></small>
                         </div>
                     </div>
                 </div>
 
-                <!-- Second Row -->
                 <div class="row mb-3">
                     <div class="col-md-4">
                         <div class="form-group">
                             <label class="font-weight-bold text-white" for="brand">Brand</label>
                             <textarea name="brand" id="brand" class="form-control" rows="1"></textarea>
+                            <small th:errors="*{brand}" id="brandUniqueError"
+                                   class=" bg-danger text-white rounded"></small>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="form-group">
                             <label class="font-weight-bold text-white" for="model">Model</label>
                             <textarea name="model" id="model" class="form-control" rows="1"></textarea>
+                            <small th:errors="*{model}" id="modelUniqueError"
+                                   class=" bg-danger text-white rounded"></small>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -45,22 +50,28 @@
                                 <option value="New">New</option>
                                 <option value="Used">Used</option>
                             </select>
+                            <small th:errors="*{state}" id="stateUniqueError"
+                                   class=" bg-danger text-white rounded"></small>
                         </div>
                     </div>
+
                 </div>
 
-                <!-- Third Row (Year, Mileage, Transmission) -->
                 <div class="row mb-3">
                     <div class="col-md-4">
                         <div class="form-group">
                             <label class="font-weight-bold text-white" for="year">Year</label>
                             <input type="number" step="any" class="form-control text-center" id="year" name="year">
+                            <small th:errors="*{year}" id="yearUniqueError"
+                                   class=" bg-danger text-white rounded"></small>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="form-group">
                             <label class="font-weight-bold text-white" for="mileage">Mileage</label>
                             <input type="number" step="any" class="form-control text-center" id="mileage" name="mileage">
+                            <small th:errors="*{mileage}" id="mileageUniqueError"
+                                   class=" bg-danger text-white rounded"></small>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -71,11 +82,12 @@
                                 <option value="Semi-automatic">Semi-Automatic</option>
                                 <option value="Manual">Manual</option>
                             </select>
+                            <small th:errors="*{transmission}" id="transmissionUniqueError"
+                                   class=" bg-danger text-white rounded"></small>
                         </div>
                     </div>
                 </div>
 
-                <!-- Fourth Row (Euro Standard, Fuel Type, Color) -->
                 <div class="row mb-3">
                     <div class="col-md-4">
                         <div class="form-group">
@@ -88,6 +100,8 @@
                                 <option value="EURO5">EURO5</option>
                                 <option value="EURO6">EURO6</option>
                             </select>
+                            <small th:errors="*{euroStandard}" id="euroStandardUniqueError"
+                                   class=" bg-danger text-white rounded"></small>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -99,6 +113,8 @@
                                 <option value="Electric">Electric</option>
                                 <option value="Hybrid">Hybrid</option>
                             </select>
+                            <small th:errors="*{fuelType}" id="fuelTypeUniqueError"
+                                   class=" bg-danger text-white rounded"></small>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -118,11 +134,12 @@
                                 <option value="Yellow">Yellow</option>
                                 <option value="Purple">Purple</option>
                             </select>
+                            <small th:errors="*{color}" id="colorUniqueError"
+                                   class=" bg-danger text-white rounded"></small>
                         </div>
                     </div>
                 </div>
 
-                <!-- Submit Button -->
                 <div class="row justify-content-center">
                     <div class="col-12 text-center">
                         <button type="submit" class="btn btn-success">Add Vehicle</button>
@@ -134,6 +151,6 @@
     </div>
 </main>
 
-<th:block th:include="~{fragments/footer}"/>
+<th:block th:insert="~{fragments/footer}"/>
 </body>
 </html>
